--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "firebase": "^10.12.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "sort-by": "^1.2.0"
+    "react-simple-code-editor": "^0.14.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
